# miope-mais

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/book/: models.py  serializers.py
backend/book/migrations/: 0001_initial.py
backend/books/: models.py  serializers.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_current_page_alter_book_number_of_pages.py
backend/core/: settings.py  urls.py
backend/ingestion_pdf/: apps.py  serializers.py  services.py  urls.py  views.py
backend/libraries/: models.py  serializers.py  urls.py  views.py
backend/libraries/migrations/: 0001_initial.py  0002_initial.py
backend/pages/: models.py  serializers.py
backend/pages/migrations/: 0001_initial.py
backend/send_pdf/: apps.py  serializers.py  services.py  urls.py  views.py
backend/users/: models.py  serializers.py  services.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_username.py
mobile/MiopeMais/: app.json  package-lock.json  package.json
mobile/MiopeMais/app/: _layout.jsx  index.jsx
mobile/MiopeMais/app/screens/book/: book_screen.jsx  preference_menu.jsx  style.jsx
mobile/MiopeMais/app/screens/font/: font_screen.jsx  style.jsx
mobile/MiopeMais/app/screens/home/: home_screen.jsx  menu.jsx
mobile/MiopeMais/app/screens/login/: login_screen.jsx  style.jsx
mobile/MiopeMais/app/screens/palette/: color_picker.jsx  style.jsx  (+1 more)
mobile/MiopeMais/components/: Previous.jsx  PreviousBook.jsx  SaveButton.jsx
(+6 files in other folders)
